--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "canvas": "^2.6.0",
     "image-size": "^0.8.3",
     "open": "^6.4.0",
+    "probe-image-size": "^5.0.0",
     "ts-node": "^8.4.1",
     "tslib": "^1.10.0",
     "typescript": "^3.6.3"
